k8/newsservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsservice
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: newsservice
  template:
    metadata:
      labels:
        app: newsservice
    spec:
      containers:
        - name: newsservice
          image: tibinlukose/news-app:v.1.5
          ports:
            - containerPort: 8080
