k8/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: strapi/strapi
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: "/srv/app"
              name: strapi
      volumes:
        - name: strapi
          persistentVolumeClaim:
            claimName: strapi-pvc
        # - name: strapi-conf
        #   configMap:
        #       name: strapi-server

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: strapi
#   namespace: demo-app
# spec:
#   selector:
#     app: strapi
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 1337

---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: strapi-server
# data:
#   server.json: |
#     {
#       "host": "localhost",
#       "port": 1337,
#       "autoReload": {
#         "enabled": true
#       },
#       "cron": {
#         "enabled": false
#       },
#       "admin": {
#         "path": "/dashboard"
#       }
#     }
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: strapi-database
# data:
#   database.json: |
#     {
#       "defaultConnection": "default",
#       "connections": {
#         "default": {
#           "connector": "mongoose",
#           "settings": {
#             "database": "alFuttaimDemo2",
#             "host": "alfuttaimdemo.mongo.cosmos.azure.com",
#             "srv": false,
#             "port": "10255",
#             "username": "alfuttaimdemo",
#             "password": "ClmMRpDeufVASgR4dlRBlsZcni24Nv2tedZkHu7WJB1WkuYcQHmtH9djryOSwxdgX9U15AFon1FXUMjrBD9zHA=="
#           },
#           "options": {
#             "authenticationDatabase": "",
#             "ssl": true
#           }
#         }
#       }
#     }
