k8/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: tibinlukose/front-end:v.1.5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
    - name: front-end-port
      port: 80
      protocol: TCP
      targetPort: 80
