k8/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
        - name: gatewayservice
          image: tibinlukose/gateway-app:v.1.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: gatewayservice
  ports:
    - name: gateway-port
      port: 80
      protocol: TCP
      targetPort: 8080
