k8/oms.yaml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: oms-pvc-media
#   namespace: demo-app
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: default
#   resources:
#     requests:
#       storage: 10Gi
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: oms-pvc-static
#   namespace: demo-app
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: default
#   resources:
#     requests:
#       storage: 10Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oms-app
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: oms-app
  template:
    metadata:
      labels:
        app: oms-app
    spec:
      containers:
        - name: oms-app
          image: tibinlukose/oms:v.1.8
          ports:
            - containerPort: 8000
      #     volumeMounts:
      #       - mountPath: "/var/static"
      #         name: staticvolumestatic
      #       - mountPath: "/var/media"
      #         name: staticvolumemedia

      # volumes:
      #   - name: staticvolumemedia
      #     persistentVolumeClaim:
      #       claimName: oms-pvc-media
      #   - name: staticvolumestatic
      #     persistentVolumeClaim:
      #       claimName: oms-pvc-static
---
apiVersion: v1
kind: Service
metadata:
  name: oms-app-service
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: oms-app
  ports:
    - name: oms-app-port
      port: 80
      protocol: TCP
      targetPort: 8000
---
