k8/weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: weather-app
  name: weather-app
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app
    spec:
      containers:
      - image: tibinlukose/weather:v.1.0
        name: weather-app
        ports:
          - containerPort: 5000
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: weather-app-svc
  name: weather-app-svc
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: weather-app
  ports:
    - port: 80
      targetPort: 5000
      name: news-port
